resolving dependencies of submodules + solving problem on creating directory inside docker